--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,6 +15,11 @@ on:
         # Sunday 7:00 PM PST = Monday 03:00 UTC (cron uses UTC)
         - cron: "0 3 * * 1"
 
+permissions:
+    actions: read
+    contents: read
+    security-events: write
+
 jobs:
     analyze:
         name: Analyze
