--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -5,15 +5,19 @@ on:
     types: [opened, edited, synchronize, reopened]
     branches:
       - develop
-      - 'release/*'
-      - 'hotfix/*'
+      - release/**
+      - hotfix/**
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   validate-pr:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Validate PR Description
         uses: actions/github-script@v7
@@ -39,7 +43,8 @@ jobs:
               'ClickUp Ticket',
               'Overview',
               'Summary of changes',
-              'Testing performed'
+              'Testing performed',
+              'Describe any breaking changes'
             ];
 
             const missingSections = requiredSections.filter(section => {
